--- a/docs/cn/uming.conf
+++ b/docs/cn/uming.conf
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <fonts>
-    <font metrics-file="/home/yiskylee/hadoopcl/src/docs/cn/uming.xml" kerning="yes" embed-file="/home/yiskylee/hadoopcl/src/docs/cn/uming.ttc">
+    <font metrics-file="/home/jmg3/hadoop-1.0.3/src/docs/cn/uming.xml" kerning="yes" embed-file="/home/jmg3/hadoop-1.0.3/src/docs/cn/uming.ttc">
       <font-triplet name="AR PL UMing" style="normal" weight="normal"/>
       <font-triplet name="AR PL UMing" style="italic" weight="normal"/>
       <font-triplet name="AR PL UMing" style="normal" weight="bold"/>
